[project]
name = "agentic-ai"
version = "0.1.0"
description = "Notebooks covering agentic ai concepts"
authors = [
    {name = "Arnab Halder",email = "halderarnab.ah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "langgraph (>=0.4.5,<0.5.0)",
    "langgraph-prebuilt (>=0.1.8,<0.2.0)",
    "langgraph-sdk (>=0.1.69,<0.2.0)",
    "langgraph-checkpoint-sqlite (>=2.0.10,<3.0.0)",
    "langsmith (>=0.3.42,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-core (>=0.3.60,<0.4.0)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "tavily-python (>=0.7.2,<0.8.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "trustcall (>=0.0.39,<0.0.40)",
    "langgraph-cli[inmem] (>=0.2.10,<0.3.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
